# voidbank

./: .dockerignore  API-DOCUMENTATION.md  DOCKER-README.md  Dockerfile  README.md  docker-compose.yml  start-voidbank.sh
account-api/: pom.xml
account-api/src/main/java/com/voidbank/account_api/: AccountApiApplication.java
account-api/src/test/java/com/voidbank/account_api/: AccountApiApplicationTests.java
backend/: pom.xml
backend/src/main/java/com/voidbank/backend/: EventTopicEnum.java  VoidbankBackendApplication.java
backend/src/main/java/com/voidbank/backend/api/: AccountApi.java  TransactionApi.java
backend/src/main/java/com/voidbank/backend/config/: OpenApiConfig.java
backend/src/main/java/com/voidbank/backend/controller/: AccountController.java  TransactionController.java
backend/src/main/resources/: application-docker.properties  application.properties
docker-lab/: docker-compose.kafka.yml  docker-compose.mysql.yml
sql/: initial_create_table.sql  initial_insert_accounts.sql
transaction-api/: pom.xml
transaction-api/src/main/java/com/voidbank/transaction_api/: TransactionApiApplication.java
transaction-api/src/main/resources/: application.properties
transaction-api/src/test/java/com/voidbank/transaction_api/: TransactionApiApplicationTests.java
transaction-bot/: .gitignore  Cargo.toml
transaction-bot/src/: main.rs
transaction-bot/src/account/: account.rs
transaction-bot/src/client/: create_transaction.rs  kafka_producer.rs  mod.rs  request_client.rs
transaction-bot/src/request/: create_transaction_request.rs  mod.rs
(+75 files in other folders)
