[package]
name = "transaction-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.34", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = [ "mysql", "runtime-tokio", "bigdecimal" ] }
bigdecimal = { version = "0.4", features = ["serde"] }
rand = "0.8"
log = "0.4.27"
simple_logger = "5.0.0"
rdkafka = { version = "0.36", features = ["tokio"] }
